// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entry Slot component Renders empty div when not active and has form 1`] = `<div />`;

exports[`Entry Slot component Renders empty div when not active and has form and entries 1`] = `<div />`;

exports[`Entry Slot component Renders empty div when not active and has no form 1`] = `<div />`;

exports[`Entry Slot component Renders when active and has entries 1`] = `
<div>
  <Component
    isActive={true}
    label="Entry Viewer"
    onActive={[Function]}
    onDeactive={[Function]}
  />
  <React.Fragment>
    <Component>
      <FormEntryViewer
        entries={
          Object {
            "31": Object {
              "datestamp": "2018-07-07 21:12:03",
              "fields": Object {
                "fld_6009157": Object {
                  "entry_id": "31",
                  "field_id": "fld_6009157",
                  "id": "96",
                  "slug": "email_address",
                  "value": "roy@hiroy.club",
                },
                "fld_7683514": Object {
                  "entry_id": "31",
                  "field_id": "fld_7683514",
                  "id": "97",
                  "slug": "comments_questions",
                  "value": "Hi Roy
          
          Line 2
          
          Line 3",
                },
                "fld_8768091": Object {
                  "entry_id": "31",
                  "field_id": "fld_8768091",
                  "id": "94",
                  "slug": "first_name",
                  "value": "Roy",
                },
                "fld_9970286": Object {
                  "entry_id": "31",
                  "field_id": "fld_9970286",
                  "id": "95",
                  "slug": "last_name",
                  "value": "Sivan",
                },
              },
              "form_id": "CF5b412c2eafc90",
              "id": "31",
              "meta": Array [],
              "status": "active",
              "user": Object {
                "email": "1@nom.com",
                "id": "1",
                "name": "admin",
              },
            },
            "32": Object {
              "datestamp": "2018-07-07 21:12:25",
              "fields": Object {
                "fld_6009157": Object {
                  "entry_id": "32",
                  "field_id": "fld_6009157",
                  "id": "101",
                  "slug": "email_address",
                  "value": "mike@hiroy.club",
                },
                "fld_7683514": Object {
                  "entry_id": "32",
                  "field_id": "fld_7683514",
                  "id": "102",
                  "slug": "comments_questions",
                  "value": "Hi Mike
          
          Line 2
          
          Line 11",
                },
                "fld_8768091": Object {
                  "entry_id": "32",
                  "field_id": "fld_8768091",
                  "id": "99",
                  "slug": "first_name",
                  "value": "Mike",
                },
                "fld_9970286": Object {
                  "entry_id": "32",
                  "field_id": "fld_9970286",
                  "id": "100",
                  "slug": "last_name",
                  "value": "Corkum",
                },
              },
              "form_id": "CF5b412c2eafc90",
              "id": "32",
              "meta": Array [],
              "status": "active",
              "user": Object {
                "email": "1@nom.com",
                "id": "1",
                "name": "admin",
              },
            },
          }
        }
        form={
          Object {
            "ID": "cf2",
            "emailIdentifyingFields": Array [],
            "entries": Object {
              "count": 3,
            },
            "field_details": Object {
              "entry_list": Object {
                "datestamp": Object {
                  "id": "datestamp",
                  "label": "Submitted",
                },
                "id": Object {
                  "id": "id",
                  "label": "ID",
                },
              },
              "order": Object {
                "fld_6009157": Object {
                  "id": "fld_6009157",
                  "label": "Email Address",
                },
                "fld_7683514": Object {
                  "id": "fld_7683514",
                  "label": "Comments Questions",
                },
                "fld_8768091": Object {
                  "id": "fld_8768091",
                  "label": "First Name",
                },
                "fld_9970286": Object {
                  "id": "fld_9970286",
                  "label": "Last Name",
                },
              },
            },
            "fields": Object {
              "fld_6009157": Object {
                "ID": "fld_6009157",
                "name": "Email Address",
                "type": "email",
              },
              "fld_7683514": Object {
                "ID": "fld_7683514",
                "name": "Comments Questions",
                "type": "paragraph",
              },
              "fld_8768091": Object {
                "ID": "fld_8768091",
                "name": "First Name",
                "type": "text",
              },
              "fld_9970286": Object {
                "ID": "fld_9970286",
                "name": "Last Name",
                "type": "text",
              },
            },
            "mailer": Object {
              "active": false,
            },
            "name": "Primary Contact Form",
            "piiFields": Array [],
            "privacyExporterEnabled": false,
          }
        }
      />
    </Component>
    <Component>
      Help Content
    </Component>
  </React.Fragment>
</div>
`;

exports[`Entry Slot component Renders when active and has no entries 1`] = `
<div>
  <Component
    isActive={true}
    label="Entry Viewer"
    onActive={[Function]}
    onDeactive={[Function]}
  />
  <React.Fragment>
    <Component>
      <FormEntryViewer
        entries={Object {}}
        form={
          Object {
            "ID": "cf2",
            "emailIdentifyingFields": Array [],
            "entries": Object {
              "count": 3,
            },
            "field_details": Object {
              "entry_list": Object {
                "datestamp": Object {
                  "id": "datestamp",
                  "label": "Submitted",
                },
                "id": Object {
                  "id": "id",
                  "label": "ID",
                },
              },
              "order": Object {
                "fld_6009157": Object {
                  "id": "fld_6009157",
                  "label": "Email Address",
                },
                "fld_7683514": Object {
                  "id": "fld_7683514",
                  "label": "Comments Questions",
                },
                "fld_8768091": Object {
                  "id": "fld_8768091",
                  "label": "First Name",
                },
                "fld_9970286": Object {
                  "id": "fld_9970286",
                  "label": "Last Name",
                },
              },
            },
            "fields": Object {
              "fld_6009157": Object {
                "ID": "fld_6009157",
                "name": "Email Address",
                "type": "email",
              },
              "fld_7683514": Object {
                "ID": "fld_7683514",
                "name": "Comments Questions",
                "type": "paragraph",
              },
              "fld_8768091": Object {
                "ID": "fld_8768091",
                "name": "First Name",
                "type": "text",
              },
              "fld_9970286": Object {
                "ID": "fld_9970286",
                "name": "Last Name",
                "type": "text",
              },
            },
            "mailer": Object {
              "active": false,
            },
            "name": "Primary Contact Form",
            "piiFields": Array [],
            "privacyExporterEnabled": false,
          }
        }
      />
    </Component>
    <Component>
      Help Content
    </Component>
  </React.Fragment>
</div>
`;
